Fix output overlays on small screens

--- a/web/resources/css/output.css
+++ b/web/resources/css/output.css
@@ -1,6 +1,27 @@
-.plan-container {
-    margin-top: 30px; 
-    transform: scale(.75);
+@media screen and (max-width: 960px) {
+    .plan-container {
+        transform: scale(1);
+    }
+    .lg-scale {
+        transform: scale(1);
+    }
+    .mid-scale {
+        transform: scale(1);
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .plan-container {
+        margin-top: 30px; 
+        transform: scale(.75);
+    }
+    .lg-scale {
+        transform: scale(1.3);
+        z-index: 1;
+    }
+    .mid-scale {
+        transform: scale(1.15);
+    }
 }
 
 .promo {
@@ -45,14 +66,6 @@
     color:white;
     font-size: 18px;
 }
-.lg-scale {
-    transform: scale(1.3);
-    z-index: 1;
-}
-
-.mid-scale {
-    transform: scale(1.15);
-}
 
 .carrier-url, .carrier-url:hover, .carrier-url:visited{
     border: none;
@@ -64,9 +77,9 @@
 }
 
 .back-button, .back-button:hover, .back-button:default{
-     color: white; 
-     font-size: 20px; 
-     background-color: #72d8fe; 
-     width: 80px; 
-     height: 40px
+    color: white; 
+    font-size: 20px; 
+    background-color: #72d8fe; 
+    width: 80px; 
+    height: 40px
 }
